@@ -3,18 +3,16 @@ non-terminals are represented by [.*] with special flags:
    if a non-terminal contains '@' it is a symbol-refixed non-terminal, and "deciam number" is
    assigned immediately aftr @.
    The refinements are indicated by "bits." See Symbol::annotate() and Symbol::annotated().
-
+   
    if a non-terminal contains '^', it is a binarized non-terminal so that we can erase
    it to reproduce original hyperedge. See Symbol::binarizedd().
    
    '+' singed indicate concatenation of labels, usually indicating binarized and merged labels.
    '/' indicates right substitution
-   '\' indidates left substitutione
-       
+   '\' indidates left substitution
+   
    '~' are used to indicate left-binarized label sequence after '^'
    '_' are used to indicate right-binarized label sequence after '^'
    
    '^L' indicates dependency left-binarization
    '^R' indicates dependency right-binarization
-
-   
