@@ -12,6 +12,7 @@ New: added more features:# of unaligned words, # of cross for terimnals, and gen
 New: bash-based learning scripts are re-implemented by equivalent, better python codes for better readability.
      Check cicada-{learn,mert}{,-moses}.py, not *.sh equivalents.
 New: added cutoff threshold for ghkm/tree extraction to prune out rare elementary trees in advance.
+New: added remove-head for removing nodes with '*' as non-temrinal
 Deprecated: bash based scripts
 Deprecated: dependency structure filters: cicada_filter_{conll,mst,cabocha} and are merged into cicada_filter_dependency
 Removed terminal-binarization and re-wrote as dependency-binarization
